(executable
 (name test_stunnel)
 (libraries
  astring
  stunnel
  threads.posix
  unix
  xapi-stdext-pervasives
  xapi-stdext-unix
  uuidm))

(test
 (name test_log_scanner)
 (libraries alcotest astring stunnel unix xapi-stdext-pervasives)
 (deps
  (source_tree data)))

; (rule
;  (alias runtest)
;  (package stunnel)
;  (action
;   (run %{exe:test_stunnel.exe})))
